# model-inference-server

./: README.md
src/clients/: CMakeLists.txt  example_client.cc  infer_request_context.cc  infer_request_context.h  infer_rpc_client.h
src/core/: CMakeLists.txt  basic_data.h  constants.h  inference_payload.cc  inference_payload.h  main.cc  memory_misc.h  model_manager_test.cc  service_config.cc  service_config.h  status.h
src/core/backend/: backend_common.cc  backend_common.h  backend_context.h
src/core/backend/demo/: demo_backend.cc  demo_backend.h  demo_backend_factory.cc  demo_backend_factory.h
src/core/model_manager/: model_manager.cc  model_manager.h
src/core/scheduler/: blocking_queue.h  scheduler_common.h  simple_scheduler.cc  simple_scheduler.h
src/core/server/: grpc_infer_request_context.cc  grpc_infer_request_context.h  grpc_server.cc  grpc_server.h  inference_core.cc  inference_core.h
src/core/tests/: demo_backend_test.cc  model_manager_test.cc
src/proto/: CMakeLists.txt  api.proto  custom_model_warmup_config.proto  data_type.proto  grpc_service.proto  model_config.proto  refresh_proto.sh  request_status.proto  server_status.proto
src/utils/: CMakeLists.txt
src/utils/file_system/: file_system.h  file_utils.cc  file_utils.h  local_file_system.cc  local_file_system.h
src/utils/timer/: timer.h
